Fix test path for verifying behavior after process launch failure after 257598@main https://bugs.webkit.org/show_bug.cgi?id=249160

Reviewed by Chris Dumez and Tim Horton.

I introduced calling a moved-from WTF::Function in our test-only code path.
This fixes that, and also makes variable names less reused in different scopes.
Covered by API tests like TestWebKitAPI.WKNavigation.FailureToStartWebProcessAfterCrashRecovery

* Source/WebKit/UIProcess/Launcher/cocoa/ProcessLauncherCocoa.mm:
(WebKit::ProcessLauncher::launchProcess):

Canonical link: https://commits.webkit.org/257746@main